@@ -376,6 +376,13 @@ jQuery( function( $ ) {
 					if ( ! result ) {
 						return;
 					}
+
+					const availablePaymentRequestTypes = Object.keys( result ).filter( type => result[type] );
+
+					if ( availablePaymentRequestTypes.length === 1 && result.link && ! wc_stripe_payment_request_params.stripe.allow_link ) {
+						return;
+					}
+
 					if ( result.applePay ) {
 						paymentRequestType = 'apple_pay';
 					} else if ( result.googlePay ) {
